--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,41 +1,57 @@
 <% include partials/header.ejs %>
-    <div class="table-wrapper">
-        <% if (spots.length > 0) {%>
-            <table class="table table-hovered">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">ID</th>
-                        <th scope="col">Image</th>
-                        <th scope="col">First Name</th>
-                        <th scope="col">Last Name</th>
-                        <th scope="col">Position</th>
-                        <th scope="col">Number</th>
-                        <th scope="col">Username</th>
-                        <th scope="col">Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% spots.forEach((spot, index) => { %>
-                        <tr>
-                            <th scope="row"><%= spot.id %></th>
-                            <td><img src="/assets/img/<%= spot.image %>" class="rounded-circle player-img" alt=""></td>
-                            <td><%= spot.title %></td>
-                            <td><%= spot.last_name %></td>
-                            <td><%= spot.position %></td>
-                            <td><%= spot.number %></td>
-                            <td>@<%= spot.user_name %></td>
-                            <td>
-                                <a href="/edit/<%= spot.id %>" target="_blank" rel="noopener" class="btn btn-sm btn-success">Edit</a>
-                                <a href="/delete/<%= spot.id %>" class="btn btn-sm btn-danger">Delete</a>
-                            </td>
-                        </tr>
-                    <% }) %>
-                </tbody>
-            </table>
-        <% } else { %>
-            <p class="text-center">No spots found. Go <a href="/add" >here</a> to add a spot.</p>
-        <% } %>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+
+            <div class="jumbotron">
+                <h2>What is LateList?</h2>
+                <p>We are some folks who seek something to do at any particular hour of the day. Welcome to <strong>LateList</strong>, our curated list of 24-hour locations across the planet.</p>
+                <div class="table-wrapper"><% if (spots.length > 0) {%>
+                    <table class="table table-hovered">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th scope="col">ID</th>
+                                <th scope="col">Image</th>
+                                <th scope="col">Title</th>
+                                <th scope="col">Address</th>
+                                <th scope="col">Locale</th>
+                                <th scope="col">Description</th>
+                                <th scope="col">Username</th>
+                                <th scope="col">Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody><% spots.forEach((spot, index) => { %>
+                            <tr>
+                                <th scope="row"><%= spot.id %>
+                                </th>
+                                <td>
+                                    <img src="/assets/img/<%= spot.image %>" class="rounded-circle player-img" alt="">
+                                    </td>
+                                    <td><%= spot.spot_title %>
+                                    </td>
+                                    <td><%= spot.spot_address %>
+                                    </td>
+                                    <td><%= spot.spot_locale %>
+                                    </td>
+                                    <td><%= spot.spot_description %>
+                                    </td>
+                                    <td>@<%= spot.spot_username %>
+                                    </td>
+                                    <td>
+                                        <a href="/edit/<%= spot.id %>" target="_blank" rel="noopener" class="btn btn-sm btn-success">Edit
+                                        </a>
+                                        <a href="/delete/<%= spot.id %>" class="btn btn-sm btn-danger">Delete
+                                        </a>
+                                    </td>
+                                </tr><% }) %>
+                            </tbody>
+                        </table><% } else { %>
+                        <p class="text-center">No spots found. Go 
+                            <a href="/add" >here</a> to add a spot.
+                        </p><% } %>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-</body>
-</html>
