--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -4,20 +4,25 @@
     <div class="row">
 		<div class="col-md-4">
 			<h3>
-				Contact Me
+				Project Information
 			</h3>
 		</div>
 		<div class="col-md-4">
 			<p>
-				Email - dman.exe[at]gmail[period]com<br/>
-				GitHub - @dmanexe<br/>
-				Twitter - @soupisgood
+				Github repo can be found here:<br/>
+				<a href="https://github.com/dmanexe/latelist">https://github.com/dmanexe/latelist</a>
 			</p>
 		</div>
 		<div class="col-md-4">
 			<p>
-				Looking for advertisers and brands to cover.<br/>Inquire within.
+				Do you want to get involved? There are some new features I want to add.
 			</p>
+			<ul>
+				<li>Map of locations</li>
+				<li>User Accounts</li>
+				<li>RSS Feed</li>
+				<li><a href="https://en.wikipedia.org/wiki/Internationalization_and_localization">i18n</a></li>
+			</ul>
 		</div>
 	</div>
 </div>
