--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,16 +1,15 @@
 <% include partials/header.ejs %>
 
 <div class="container-fluid">
-    <div class="row">
+    <div class="row" style="padding: 15%;">
 		<div class="col-md-4">
 			<h3>
-				Project Information
+				Project<br/>Information
 			</h3>
 		</div>
 		<div class="col-md-4">
 			<p>
-				Github repo can be found here:<br/>
-				<a href="https://github.com/dmanexe/latelist">https://github.com/dmanexe/latelist</a>
+				github: <a href="https://github.com/dmanexe/latelist">dmanexe/latelist</a>
 			</p>
 		</div>
 		<div class="col-md-4">
@@ -18,8 +17,8 @@
 				Do you want to get involved? There are some new features I want to add.
 			</p>
 			<ul>
-				<li>Map of locations</li>
-				<li>User Accounts</li>
+				<li>Map</li>
+				<li>Accounts</li>
 				<li>RSS Feed</li>
 				<li><a href="https://en.wikipedia.org/wiki/Internationalization_and_localization">i18n</a></li>
 			</ul>
