--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,6 +25,9 @@
         width: 40px;
         height: 40px;
     }
+    h2 {
+        margin-top: 10px;
+    }
 </style>
 <body>
 <div class="page-wrapper">
