Added a logo file to the contact page
Credits to favicon.cc

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,7 +1,19 @@
 <% include partials/header.ejs %>
 
 <div class="container-fluid">
-    <div class="row" style="padding: 15%;">
+	<div class="row">
+		<div class="col-md-3">
+		</div>
+		<div class="col-md-6">
+				<img src="assets/latelist.png" style="max-width: 100%; background: black; padding: 15%;"/>
+		</div>
+		<div class="col-md-3">
+		</div>
+	</div>
+
+	<hr class="col-xs-12">
+
+    <div class="row" style="padding: 0 15% 15% 15%;">
 		<div class="col-md-4">
 			<h3>
 				Project<br/>Information
