--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,11 +20,7 @@
     <title><%= title %></title>
 </head>
 <style>
-    .table-wrapper {
-        margin-top: 50px;
-    }
-
-    .player-img {
+    .spot-img {
         width: 40px;
         height: 40px;
     }
