Fixing viewSpot and addSpot

--- a/views/add-spot.ejs
+++ b/views/add-spot.ejs
@@ -39,11 +39,11 @@
             <div class="form-row">
                 <div class="form-group col-md-2">
                     <label>Latitude</label>
-                    <input type="text" class="form-control" name="spot_lat" id="spot_lat" placeholder="Ex: " required>
+                    <input type="text" class="form-control" name="spot_lat" id="spot_lat" placeholder="Ex: 40.741895" required>
                 </div>
                 <div class="form-group col-md-2">
                     <label>Longitude</label>
-                    <input type="text" class="form-control" name="spot_long" id="spot_long" placeholder="Ex: " required>
+                    <input type="text" class="form-control" name="spot_long" id="spot_long" placeholder="Ex: -73.989308" required>
                 </div>
                 <div class="col-md-8">
                     <label for="spot-img"><b>Spot Image</b></label><br>
