--- a/views/view-spot.ejs
+++ b/views/view-spot.ejs
@@ -1,6 +1,15 @@
 <% include partials/header.ejs %>
     <div class="container">
-        <h2>View Spot</h2>
+   		<a href="/edit/<%= spot.id %>" class="btn btn-sm btn-info float-right ml-3"><i class="fas fa-edit"></i> Edit</a>
+        <a href="/delete/<%= spot.id %>" class="btn btn-sm btn-danger float-right"><i class="fas fa-minus-circle"></i> Delete</a>
+        <h2><%= spot.spot_title %></h2>
+
+        
+    
+    	<hr class="col-xs-12">
+	    <div class="form-row">
+	        <div class="form-group col-md-4"><strong>Address</strong><br/><%= spot.spot_address %></div>
+	    </div>
     </div>
 </div>
 </body>
