--- a/views/view-spot.ejs
+++ b/views/view-spot.ejs
@@ -2,14 +2,18 @@
     <div class="container">
    		<a href="/edit/<%= spot.id %>" class="btn btn-sm btn-info float-right ml-3"><i class="fas fa-edit"></i> Edit</a>
         <a href="/delete/<%= spot.id %>" class="btn btn-sm btn-danger float-right"><i class="fas fa-minus-circle"></i> Delete</a>
-        <h2><%= spot.spot_title %></h2>
+        <h2><img src="/assets/img/<%= spot.image %>" class="rounded-circle spot-img" alt=""> <%= spot.spot_title %></h2>
 
-        
-    
     	<hr class="col-xs-12">
+
 	    <div class="form-row">
 	        <div class="form-group col-md-4"><strong>Address</strong><br/><%= spot.spot_address %></div>
+	        <div class="form-group col-md-4"><strong>Location Type</strong><br/><%= spot.spot_locale %></div>
+	        <div class="form-group col-md-4"><strong>Additional Info</strong><br/><%= spot.spot_description %></div>
 	    </div>
+	    <div class="form-row">
+	    	<div class="form-group col-md-2"><strong>Longitude</strong><br/><%= spot.spot_longitude %></div>
+	    	<div class="form-group col-md-2"><strong>Latitude</strong><br/><%= spot.spot_latitude %></div>
     </div>
 </div>
 </body>
