--- a/views/add-spot.ejs
+++ b/views/add-spot.ejs
@@ -1,6 +1,6 @@
 <% include partials/header.ejs %>
     <div class="container">
-        <h2>Add Spot</h2>
+        <h2 class="mt-3">Add Spot</h2>
         <hr class="col-xs-12">
         <% if (message != '') { %>
             <p class="text-center text-danger"><%= message %></p>
