--- a/views/edit-spot.ejs
+++ b/views/edit-spot.ejs
@@ -1,6 +1,6 @@
 <% include partials/header.ejs %>
 <div class="container">
-    <h2>Edit Spot</h2>
+    <h2 class="mt-10">Edit Spot</h2>
     <hr class="col-xs-12">
     <% if (message) { %>
         <p class="text-center text-danger"><%= message %></p>
