--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,12 +25,7 @@
     .spot-img {
         width: 40px;
         height: 40px;
-    }
-    h2 {
-        margin-top: 10px;
-    }
-    .jumbotron {
-        margin-top: 15px;
+        background: white;
     }
 </style>
 <body>
