--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -49,7 +49,7 @@
                         </li>
                     </ul>
                     <form class="form-inline float-right">
-                        <input class="form-control mr-sm-2" type="text" />
+                        <input class="form-control mr-sm-2" type="text" placeholder="Search not functional." />
                         <button class="btn btn-primary my-2 my-sm-0" type="submit">
                             Search
                         </button>
