Ready for release changes!

--- a/views/edit-spot.ejs
+++ b/views/edit-spot.ejs
@@ -49,9 +49,9 @@
             <button type="submit" class="btn btn-success float-right">Update Spot</button>
         </form>
     <% } else { %>
-        <p class="text-center">Spot Not Found. Go <a href="/add">here</a> to add a spot.</p>
+        <p class="text-center">Spot Not Found. Go <a href="../add">here</a> to add a spot.</p>
     <% } %>
 </div>
 </div>
 </body>
-</html> 
+</html>
